--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .container {
     display: flex;
-    height: 800px;
+    /* height: 800px; */
     background-color: white;
     padding: 30px;
     border-radius: 20px;
@@ -74,6 +74,39 @@ button {
     cursor: pointer;
 }
 
+/* button:hover {
+    background: linear-gradient(to right, hsl(4, 100%, 67%));
+} */
+
 h3 {
     font-size: 50px;
 }
+
+.hide {
+    display: none;
+}
+
+.container-2 {
+    background-color: white;
+    width: 400px;
+    padding: 40px;
+    border-radius: 20px;
+}
+
+.container-2 h1 {
+    font-size: 40px;
+}
+
+.container-2 img {
+    width: 40px;
+}
+
+.container-2 button {
+    width: 100%;
+    color: white;
+    background-color: hsl(235, 18%, 26%);
+}
+
+/* .container-2 button:hover {
+    background: linear-gradient(90deg, hsl(4, 100%, 67%));
+} */
